# EDL_TUE16

./: CMakeLists.txt  README.md
CAD/: PCR_Heater v4.f3d  box v4.dxf  vial 0.2ml.SLDPRT
PCB/: PocketPCR.kicad_pcb  PocketPCR.kicad_prl  PocketPCR.kicad_pro  PocketPCR.kicad_sch  fp-lib-table  sym-lib-table
PCB/Gerber_Files/: B_Cu.gbr  Edge_Cuts.gbr  F_Cu.gbr  NPTH.drl  PTH.drl
PCR-Schematics/: PCR-Schematics.kicad_pcb  PCR-Schematics.kicad_prl  PCR-Schematics.kicad_pro  PCR-Schematics.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
PCR_code/: gui.py
PCR_code/pico/: PID.c  thermal_profile.py
PCR_code/pico/PCR/: CmakeLists.txt  GUI.py  constants.h
PCR_code/pico/red/: CmakeLists.txt  main.txt
PCR_code/pid_arduino/: pid_arduino.ino
PCR_code/pid_arduino/results/: TESTING-RESULTS_12V.txt
PocketPCR/: PocketPCR.kicad_pcb  PocketPCR.kicad_prl  PocketPCR.kicad_pro  PocketPCR.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~PocketPCR.kicad_pcb.lck
PocketPCR/Gerber_Files/: PocketPCR-B_Cu.gbr  PocketPCR-B_Mask.gbr  PocketPCR-B_Paste.gbr  PocketPCR-B_Silkscreen.gbr  PocketPCR-Edge_Cuts.gbr  PocketPCR-F_Cu.gbr  PocketPCR-F_Mask.gbr  PocketPCR-F_Paste.gbr  PocketPCR-F_Silkscreen.gbr  PocketPCR-NPTH-drl_map.gbr  PocketPCR-NPTH.drl  PocketPCR-PTH-drl_map.gbr  PocketPCR-PTH.drl  PocketPCR-job.gbrjob
Schematics/PocketPCR/: PocketPCR.kicad_pcb  PocketPCR.kicad_prl  PocketPCR.kicad_pro  PocketPCR.kicad_sch  fp-info-cache  fp-lib-table
